# embryo_binary_segmentation

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: embryo_binary_segmentation_notebook.ipynb  evaluation_notebook.ipynb  training_notebook.ipynb  training_notebook_Gesa.ipynb
src/embryo_binary_segmentation/: __init__.py  _config.py  _data_load.py  _embryo_binary_segmentation.py  _evaluation.py  _final_predictions.py  _losses.py  _train_functions.py  _unet_smaller.py
src/embryo_binary_segmentation/_tests/: test_module.py
