[metadata]
name = embryo_binary_segmentation
version = 0.0.1
description = CNN-based model for 3D segmentation of mou
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/embryo_binary_segmentation
author = Polina Soloveva
author_email = polina.soloveva@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GuignardLab/embryo_binary_segmentation/issues
    Documentation = https://github.com/GuignardLab/embryo_binary_segmentation#README.md
    Source Code = https://github.com/GuignardLab/embryo_binary_segmentation
    User Support = https://github.com/GuignardLab/embryo_binary_segmentation/issues

[options]
packages = find:
install_requires =
    numpy
    scikit-learn
    scikit-image
    jupyter
    matplotlib
    bumpver
    torch
    torchio
    opencv-python-headless
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
